ngGuitarTech/src/app/components/setups/setups.component.css
@media (min-width: 320px) and (max-width: 480px) {
  .setups-container {
    height: 90vh;
    width: 100%;
    background-color: lightcoral;
    overflow-y: scroll;
    overscroll-behavior: none;
    /* scroll-snap-align: start; */
  }

  .setup-container {
    background-color: lemonchiffon;
    height: 100%;
    width: 100%;
  }

  .setup-container:nth-child(even) {
    background-color: cornflowerblue;
  }
}

@media (min-width: 481px) and (max-width: 1279px) {
  .setups-container {
    height: 90vh;
    width: 100%;
    background-color: lightcoral;
    overflow-y: scroll;
    overscroll-behavior: none;
    /* scroll-snap-align: start; */
  }

  .setup-container {
    background-color: lemonchiffon;
    height: 100%;
    width: 100%;
  }

  .setup-container:nth-child(even) {
    background-color: cornflowerblue;
  }
}


@media (min-width: 1280px) {
  .setups-container {
    height: 75vh;
    min-width: 100%;
    overflow-y: scroll;
    overscroll-behavior: none;
    border-bottom-right-radius: 10px;
    background-image: url('../../../assets/guitar.svg');
    background-size: 40%;
    background-color: white;
  }

  .setup-container {
    background-color: lemonchiffon;
    height: 100%;
    width: 100%;
  }

  .setup-container:nth-child(even) {
    background-color: cornflowerblue;
  }

  :host {
    width: 50%;
  }

  .bgColor:nth-child(odd) {
    background-color: #f5f5f5;
  }

  .bgColor:nth-child(even) {
    background-color: #519988;
  }
}

